# PAW--Phishing-Attribution-Workbench--

./: # Code Citations.md  .dockerignore  .env.example  ATOMIC_ALERT_SETUP.md  Dockerfile  FILE_MONITORING_INFRASTRUCTURE.md  GUI_GUIDE.md  GUI_NEW_FEATURES.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  REAL_WORLD_ANALYSIS_RESULTS.md  REMEDIATION_SUMMARY.md  SECURITY_FIXES_COMPLETED.md  SENTINEL_README.md  TROUBLESHOOTING.md  _list_campaigns.py  check_db_fields.py  check_victims.py  deploy.sh  docker-compose.yml  generate_geo_report.py  pyproject.toml  requirements.txt  run_analyzer.py  setup.py  start_canary.py  test_email.eml  test_phishing.eml  test_real_workflow.py  test_system.py
advanced/: analyze_trackers_advanced.py  attribution_confirmation_engine.py  deception_countermeasure_engine.py  derive_host_ip_asn_advanced.py  kit_static_mapper_advanced.py  operational_pattern_predictor.py  quantum_resistant_forensics.py  strategic_correlator.py
config/: place_tokens_example.json
inbox/: README.txt  Re Gæt rigtigt og vind Bornholm! __ID#RWYP-MS3Z-0UEF.eml
paw/: __main__.py
paw/canary/: server.py
paw/canary/templates/: fingerprint_login.html  verified.html
paw/config/: proxy_config.py
paw/core/: abuse.py  attach.py  attribution_matrix.py  auth.py  dns_enrichment.py  evidence.py  exporter.py  form_analysis.py  graphs.py  header_forgery.py  index.py  ja3_fingerprinting.py  ml_scorer.py  parser_mail.py  profiler.py  received.py  redirect_chain.py  rekor.py  scoring.py  signature.py  stix.py  tls_fingerprinting.py  trace.py  trackers.py  trust_boundary.py  verify.py
paw/deobfuscate/: __init__.py  core.py  homoglyph.py  html.py  javascript.py  text.py  url.py
paw/detonate/: runner.py
paw/gui/: __init__.py  tk_gui.py
paw/i18n/: en.json  it.json
paw/intelligence/: README.md  criminal_hunter.py  enrich_last_hunt.py  infrastructure_mapper.py  last_hunt.json  last_hunt_multi.json  le_package.py  threat_intel.py
paw/modules/encrypted_clicking/: Dockerfile.encrypted  README.md  demonstrate_results.py  docker-compose.encrypted-clicker.yml  encrypted_clicker.py  init_crypto.sh  paw_integration.py  requirements.txt
paw/modules/encrypted_clicking/test_cases/phishing_campaign_20251029_145123/: encrypted_click_analysis_0.enc  encrypted_click_analysis_1.enc
paw/sentinel/: __init__.py  config.py  database.py  file_monitor.py  geographic_reports.py  intelligence_analyzer.py  ip_analyzer.py  monitor.py
paw/templates/: abuse_en_compromised.txt  abuse_en_takedown.txt  abuse_it_compromised.txt  abuse_it_takedown.txt  fingerprint_login.html  verified.html
paw/util/: fsutil.py  hashutil.py  timeutil.py  validators.py
paw/web/: __init__.py  api.py
paw/web/frontend/: index.html  package.json
scripts/: update_origin.py
tests/: run_deob_test.py
tools/: analyze_inbox.py
util/: analyze_trackers.py  attribution_confirmation_engine.py  build_flow_mermaid.py  deception_countermeasure_engine.py  derive_host_ip_asn.py  kit_static_mapper.py  make_abuse_templates.py  operational_pattern_predictor.py  quantum_resistant_forensics.py  validators.py
